# lambda-dynamics-quadrature

./: .gitmodules  CMakeLists.txt  README.org  ensemble-average.cpp  ensemble-average.h  observable.h  potential.cpp  potential.h  run-computation.cpp  test-ensemble-average.cpp  test-potential.cpp  test-quadrature.cpp
doc/: .gitignore  model-system.tex
